[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "sdksio-juniper-mist-sdk"
description = "Use the Juniper Mist SDK to automate many Mist processes by using the RESTful API, webhooks, and the WebSocket API."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["juniper networks", "mist api", "sdksio"]
authors = [{name = "developer-sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://www.apimatic.io/api-docs/juniper-mist"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "python-dateutil~=2.8.1", "enum34~=1.1, >=1.1.10", "deprecation~=2.1"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
